# JustApply

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  NOTES.md  README.md  database.py  job-hunter.skill  job_hunter.py  progress.txt  prototype_dashboard.html  prototype_dashboard.py  pyproject.toml  ralph.sh  requirements-dev.txt  requirements.txt  sample.txt
.claude/: mcp.json  settings.json
.cursor/: hooks.json
.cursor/rules/: rules.mdc
.gemini/: settings.json
.github/workflows/: ci.yml
docs/: prd-job-archival.md
docs/adr/: 0001-google-sheets-oauth-mcp-storage.md  0002-hybrid-scraping-architecture.md  0003-fail-fast-scraping-credit-protection.md  0003-parallel-batch-evaluation.md  0004-llm-based-contact-classification.md  0005-always-enrich-via-apify-with-job-poster-classification.md  0006-contact-sample-cache-and-pre-evaluation-filters.md  0007-apify-spend-controls-and-accepted-lane.md  0008-llm-attribute-classification.md  0009-database-safety-gate.md  0010-gemini-batch-api-evaluation.md  0010-region-scoped-scrapes-and-spend-confirmation.md  0011-parallel-batch-evaluation.md  0012-region-scoped-scrapes-and-spend-confirmation.md
docs/issues/: 52-manual-archive.md  53-auto-archive-sweep.md  54-archived-visibility-unarchive.md  55-archived-drag-rules.md  56-qa-job-archival.md
docs/prd/: apify-spend-controls-and-accepted-lane.md  contacted-elsewhere-performance.md  database-migration-framework-and-schema-hygiene.md  developer-tooling-and-quality-gates.md  documentation-and-domain-alignment.md  enrichment-pipeline-hardening.md  filtered-apify-audience-streams.md  internal-code-consistency-cleanup.md  kanban-dashboard-maintainability.md
evals/: evals.json
jobspy-mcp-server/: package-lock.json  package.json
progress/: ralph-prd-106.txt  ralph-prd-109.txt  ralph-prd-111.txt  ralph-prd-112.txt  ralph-prd-85.txt  ralph-prd-86.txt  ralph-prd-95.txt
resumes/: bi_intelligence.md  data_analyst.md  general_cv.md  project_manager.md  qa.md
scripts/: backfill_recruiters.py  google_sheets_mcp.py  probe_brightdata_company.py  probe_brightdata_fields.py  run-github-mcp.sh
scripts/hooks/: db_safety_gate.py
src/: cli.py  dashboard.html  database.py  pipelines.py  rate_limiter.py  run_dashboard.py  schemas.py  server.py
src/cli/: __init__.py  cli.py  gemini_agent.py
src/core/: attribute_gating.py  batch_evaluation.py  batch_poller.py  evaluation_lock.py  gemini_client.py  matcher.py  outreach.py  regions.py  scraper.py
src/db/: __init__.py  batch_jobs.py  (+7 more)
tests/: job_helpers.py  kanban_js.py  test_activity_log.py  test_archive.py  test_archive_sweep_decoupling.py  test_archived_drag.py  test_attribute_gating.py  test_auto_archive.py  test_backfill_pipeline.py  test_batch_evaluation.py  test_batch_jobs.py  test_batch_poller.py  test_collect_cli.py  test_connection_note.py  test_contact_sample_cache.py  test_contacted_elsewhere.py  test_cost_confirmations.py  test_dashboard_dead_ui.py  test_dashboard_dnd.py  test_dashboard_jobs.py  test_dashboard_lane_collapse.py  test_dashboard_modules.py  test_dashboard_outreach_settings.py  test_dashboard_panel_chrome.py  test_dashboard_profile_manager.py  test_dashboard_resumes.py  test_dashboard_sse_refresh.py  test_database.py  test_db_safety_gate.py  test_drawer_drafts.py  test_dual_audience.py  test_enrichment_coordinator.py  test_enrichment_modules.py  test_enrichment_pipeline.py  test_evaluation_lock.py  test_gemini_client.py  test_google_sheets_mcp.py  test_job_hunter.py  test_job_hunter_service.py  test_job_model.py  (+27 more)
(+32 files in other folders)
