# JustApply — canonical dependency and project metadata source.
#
# Version policy: dependencies use compatible-release ranges (>=X,<next_major)
# so security patches flow in while major upgrades stay deliberate. We do not
# commit a lock file; after changing bounds here, reinstall in a fresh venv and
# run `pytest tests/` before merging. To pin exact versions for a deployment,
# export with `pip freeze` or adopt uv/pip-tools in a follow-up.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "justapply"
version = "0.1.0"
description = "AI-powered job search and application pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "watchfiles>=1.0.0,<2.0.0",
    "sse-starlette>=2.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "google-genai>=1.0.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.9.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length — existing code; tighten in a follow-up
]

[tool.ruff.lint.per-file-ignores]
# Package barrels re-export public APIs without using names locally.
"**/__init__.py" = ["F401"]
# load_dotenv() must run before importing modules that read os.environ.
"src/cli/cli.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# First gate: db, schemas, service only; skip deep checks on out-of-scope imports.
follow_imports = "silent"
files = ["src/db", "src/schemas.py", "src/service"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "httpx.*",
    "sse_starlette.*",
]
ignore_missing_imports = true
